--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "sergiojavierre <sergiojavierre91@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/jest": "^29.2.1",
     "@types/mysql": "^2.15.21",
@@ -22,6 +23,7 @@
     "ts-node": "^10.9.1"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mysql": "^2.18.1"
