--- a/api/package.json
+++ b/api/package.json
@@ -4,28 +4,23 @@
   "description": "",
   "main": "src/index.ts",
   "scripts": {
-    "start": "ts-node src/index.ts",
-    "dev": "nodemon src/index.ts",
-    "test": "jest --coverage"
+    "start": "ts-node api/src/index.ts",
+    "dev": "nodemon api/src/index.ts"
   },
-  "author": "sergiojavierre <sergiojavierre91@gmail.com>",
+  "author": "sergiojavierre <sergio.javierre@fppiramide.com>",
   "license": "MIT",
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/jest": "^29.2.1",
     "@types/mysql": "^2.15.21",
-    "@types/supertest": "^2.0.12",
-    "jest": "^29.2.2",
     "nodemon": "^2.0.20",
-    "supertest": "^6.3.1",
-    "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mysql": "^2.18.1"
+    "mysql2": "^2.3.3"
   }
 }
